Comunicacion Backend-Front

--- a/app/pages/login.html
+++ b/app/pages/login.html
@@ -18,7 +18,7 @@
 					<!-- font awesome icon -->
 					<i class="fas fa-user"></i>
 				</label>
-				<input type="text" name="username" placeholder="Legajo" id="username" required>
+				<input type="number" name="legajo" placeholder="Legajo" id="legajo" required>
 				<label for="password">
 					<i class="fas fa-lock"></i>
 				</label>
