--- a/app/pages/register.html
+++ b/app/pages/register.html
@@ -36,7 +36,7 @@
 			<div class="info" id="passPatron">Ingrese la Contraseña del Usuario Patrocinador</div>
 			<input class="input" type="password" id="inputPassPatron" required>
 
-			<p class="error escondido">Error</p>
+			<p class="error escondido">Error al Registrarse</p>
 
 			<input class="boton enviar" type="submit" value="enviar" id="submit">
 		</form>
