--- a/app/pages/admin/admin.html
+++ b/app/pages/admin/admin.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Bienvenido Usuario</h1>
-    <button>Cerrar Sesion</button>
+    <button class="logout">Cerrar Sesion</button>
 </body>
 </html>
