Login con mySQL funcional

--- a/app/pages/admin/admin.html
+++ b/app/pages/admin/admin.html
@@ -7,7 +7,7 @@
     <script src="admin.js" defer></script>
 </head>
 <body>
-    <h1>Bienvenido Usuario</h1>
+    <h1 id="bienvenida">Bienvenido Usuario</h1>
     <button class="logout">Cerrar Sesion</button>
 </body>
 </html>
