App limites con usuario eyeHawk

--- a/app/pages/admin/limites.html
+++ b/app/pages/admin/limites.html
@@ -5,17 +5,17 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="admin.css" />	
 	<script src="admin.js" defer></script>
-	<title>Super User</title>
+	<title>Edicion de Limites</title>
 </head>
 <body>
     <button class="logout boton">Cerrar Sesion</button>
 <div class="container">
 	<div class="cuerpo">
-		<h3 class="titulo" id="tittle">Menu Super User</h3>
+		<h3 class="titulo" id="tittle">Edicion de Limites</h3>
 		<div class="bienvenida" id="bienvenida">Bienvenido Usuario X</div>
 		<div class="botones">
-			<div class="home"><button onclick="location.href='/limites'" class="boton atras">Limites</button></div>
-			<div class="home"><button class="boton atras">Admistrar Clima/Carriers</button></div>
+			<div class="home"><button onclick="location.href='/limitesfiltros'" class="boton atras">Limites Filtros</button></div>
+			<div class="home"><button class="boton atras">Limites Clima</button></div>
 		</div>
 
 	</div>
