--- a/app/pages/register.html
+++ b/app/pages/register.html
@@ -30,6 +30,9 @@
 			<div class="info" id="passUser">Ingrese la Contraseña para el Usuario</div>
 			<input class="input" type="password" id="inputPassUser" required>
 
+			<div class="info" id="clavex">Clavex</div>
+			<input class="input" type="text" id="inputClavex">
+
 			<div class="info" id="userPatron">Legajo Usuario Patrocinador:</div>
 			<input class="input" type="number" id="inputUserPatron" required>
 
