sistema usuarios con limites-filtros funcional

--- a/app/pages/admin/fabsLimFil.html
+++ b/app/pages/admin/fabsLimFil.html
@@ -23,6 +23,8 @@
             </div>
             <div class="instalaciones">
             </div>
+            <div class="form-content">
+            </div>
         </div>
     </div>
 
