--- a/app/pages/admin/limites.html
+++ b/app/pages/admin/limites.html
@@ -3,15 +3,17 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="admin.css" />	
+    <link rel="icon" href="iconOjodeHalcon.svg" type="image/svg+xml">
+	<link rel="stylesheet" type="text/css" href="style.css" />	
 	<script src="admin.js" defer></script>
 	<title>Edicion de Limites</title>
 </head>
 <body>
-    <button class="logout boton">Cerrar Sesion</button>
+    <button class="logout">Cerrar Sesion</button>
 <div class="container">
 	<div class="cuerpo">
 		<h3 class="titulo" id="tittle">Edicion de Limites</h3>
+		<button class="eyeHawk" onclick="location.href='/eyehawk'"></button>
 		<div class="bienvenida" id="bienvenida">Bienvenido Usuario X</div>
 		<div class="botones">
 			<div class="home"><button onclick="location.href='/limitesfiltros'" class="boton atras">Limites Filtros</button></div>
