--- a/app/pages/login.html
+++ b/app/pages/login.html
@@ -5,6 +5,7 @@
 		<link rel="icon" type="image/svg+xml" href="iconOjodeHalcon.svg" >
 		<meta name="viewport" content="width=device-width,minimum-scale=1">
 		<title>Login</title>
+		<link rel="icon" href="iconOjodeHalcon.svg" type="image/svg+xml">
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
         <!-- include the stylesheet file -->
         <link href="style.css" rel="stylesheet" type="text/css">
@@ -12,7 +13,7 @@
 	</head>
 	<body>
 		<div class="login">
-			<h1>Login  | <a  href="http://192.168.3.122/ProyectoOjodeHalconV2">Ojo de Halcon</a></h1>
+			<h1>Login  | <a  href="/eyeHawk">Ojo de Halcon</a></h1>
 			<form id="login-form">
 				<label for="username">
 					<!-- font awesome icon -->
