--- a/app/pages/register.html
+++ b/app/pages/register.html
@@ -3,7 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="register.css" />	
+	<link rel="stylesheet" type="text/css" href="register.css" />	
+	<link rel="icon" href="iconOjodeHalcon.svg" type="image/svg+xml">
 	<title>Formulario de Registro de Usuario</title>
 	<script src="register.js" defer></script>
 </head>
