--- a/app/pages/admin/fabsLimFil.html
+++ b/app/pages/admin/fabsLimFil.html
@@ -3,14 +3,16 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="iconOjodeHalcon.svg" type="image/svg+xml">
     <link rel="stylesheet" type="text/css" href="style.css" />   
 	<title>Instalaciones de Filtros</title>
     <script src="fabsLimFil.js" defer></script>
 </head>
 <body>
+    <button class="eyeHawk" onclick="location.href='/eyehawk'"></button>
     <div class="bienvenida" id="bienvenida">Bienvenido Usuario X</div> 
     <h1 class="titulo">Instalaciones de Filtros (fábricas)</h1>
-    <button class="logout">Cerrar Sesion</button>
+    <button class="logout" id="logout">Cerrar Sesion</button>
     <div class="container">
         <div class="cuerpo">
             <div class="botones">
