--- a/app/pages/admin/fabsLimFil.html
+++ b/app/pages/admin/fabsLimFil.html
@@ -6,7 +6,7 @@
     <link rel="icon" href="iconOjodeHalcon.svg" type="image/svg+xml">
     <link rel="stylesheet" type="text/css" href="style.css" />   
 	<title>Instalaciones de Filtros</title>
-    <script src="fabsLimFil.js" defer></script>
+    <script type="module" src="fabsLimFil.js" defer></script>
 </head>
 <body>
     <button class="eyeHawk" onclick="location.href='/eyehawk'"></button>
